--- a/Views/Home/Artist1.cshtml
+++ b/Views/Home/Artist1.cshtml
@@ -55,11 +55,11 @@
    <section class="sec4 py-5" id="artist-profile">
         <div class="container pt-3">
             <div class="row my-5 pt-3">
-                <div class="col-lg-4 col-md-3 col-sm-12 col-12 text-end my-2">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-10 my-2 pb-2">
                     <img src="~/img/artist1.jpg" class="border rounded-circle img-fluid" alt=""
-                        style="height: 250px; width: 250px;">
+                        style="height: 220px; width: 220px;">
                 </div>
-                <div class="col-lg-6 col-md-9 col-sm-12 col-12 font2 text-start position-relative">
+                <div class="col-lg-6 col-md-8 col-sm-12 col-12 font2 text-start position-relative">
                     <h2 class=" font2">Handmade Creations</h2>
                     <p class="my-3  text-wrap">Lorem ipsum, dolor sit amet consectetur
                         adipisicing elit. Deserunt qui harum
@@ -82,7 +82,7 @@
                 </thead>
             </table>
             <div class="row text-center font2 mt-5">
-                <div class="col-12 col-sm-6 col-md-3 col-lg-3">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                     <figure class="figure">
                          <a asp-controller="home" asp-action="Collection1" ><img src="~/img/Painting1.jpg" class="figure-img img-fluid rounded"
                                 alt="..."></a>
@@ -90,7 +90,7 @@
                                 400</span></figcaption>
                     </figure>
                 </div>
-                <div class="col-12 col-sm-6 col-md-3 col-lg-3">
+                <div class="col-sm-6 col-md-4 col-lg-3 col-12 ">
                     <figure class="figure">
                         <a href=""> <img src="~/img/sketches.jpg" class="figure-img img-fluid rounded" alt="..."></a>
                         <figcaption class="figure-caption text-start">Sketch<span class="float-end"> Rs 500</span>
