--- a/Views/Home/ArtistProfile.cshtml
+++ b/Views/Home/ArtistProfile.cshtml
@@ -53,11 +53,11 @@
   <section class="sec4 py-5" id="artist-profile">
         <div class="container pt-3">
             <div class="row my-5 pt-3">
-                <div class="col-lg-4 col-md-3 col-sm-12 col-12 text-end my-2">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-10 my-2 pb-2">
                     <img src="~/img/new_artist.png" class="border rounded-circle img-fluid" alt=""
-                        style="height: 250px; width: 250px;">
+                        style="height: 220px; width: 220px;">
                 </div>
-                <div class="col-lg-6 col-md-9 col-sm-12 col-12 font2 text-start position-relative mt-5">
+                <div class="col-lg-6 col-md-8 col-sm-12 col-12 font2 text-start position-relative mt-4">
                     <h2 class=" font2">Add Name</h2>
                     <p class="my-3  text-wrap">Add Bio</p>
                     <form class="d-flex">
