--- a/Views/Home/CustomArt.cshtml
+++ b/Views/Home/CustomArt.cshtml
@@ -2,7 +2,7 @@
     <section class="container-fluid">
        <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12 col-12 login-section">
-                <img src="~/img/painting1profile.jpg" class="img-fluid" alt="" style="height:40.5rem;">
+                <img src="~/img/painting1profile.jpg" class="img-fluid" alt="" style="height:100vh;">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 col-12 pt-5">
                 <div class="container pt-4 text-center">
@@ -12,7 +12,7 @@
                     </a>
                 </div>
                 <div class="container d-flex justify-content-center" style="width: fit-content;">
-                    <div class="row py-2 ms-3">
+                    <div class="row pt-2 ms-3">
                         <div class="row py-2">
                             <div>
                                 <label for="name" class="form-label">Name</label>
@@ -40,7 +40,7 @@
                                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                             </div>
                         </div>
-                        <div class="d-grid gap-2 col-sm-8 ms-auto me-auto pt-3">
+                        <div class="d-grid gap-2 col-sm-6 col-12 ms-auto me-auto pt-3">
                             <a href="" class="btn btn-primary rounded-pill shadow-none">Send</a>
                         </div>
                     </div>
