--- a/Views/Home/EditArtistProfile.cshtml
+++ b/Views/Home/EditArtistProfile.cshtml
@@ -51,8 +51,7 @@
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                         </div>
                     </div>
-
-                    <div class="d-grid gap-2 col-sm-8 ms-auto me-auto pt-4 pb-5 ">
+                    <div class="d-grid gap-2 col-sm-8 ms-auto me-auto pt-3">
                         <a href="" class="btn btn-primary rounded-pill shadow-none">Save Changes</a>
                     </div>
                 </div>
