--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -46,17 +46,15 @@
           </div>
       </footer> -->
     <div>
-        <main role="main" class="pb-3">
+        <main role="main">
             @RenderBody()
         </main>
     </div>
-    <footer class="py-5 bg-dark text-white">
+  <!--  <footer class="py-5 bg-dark text-white">
         <div class="container">
             <ul class="nav justify-content-center  pb-1 mb-1">
                 <li class="nav-item"><a asp-controller="home" asp-action="About" class="nav-link px-3 text-muted font2 footer-list">About</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-3 text-muted font2 footer-list">FAQ</a></li>
-                <!-- <li class="nav-item"><a href="#" class="nav-link px-3 text-muted font2 footer-list">Artist Login</a></li> -->
-                <!-- <li class="nav-item"><a href="#" class="nav-link px-3 text-muted font2 footer-list">Customer Login</a></li> -->
                 <li class="nav-item"><a href="#" class="nav-link px-3 text-muted font2 footer-list">Contact Us</a></li>
             </ul>
             <div class="text-center">
@@ -66,7 +64,7 @@
             </div>
             <p class="text-center text-muted pt-1 mt-2 footer-list">Terms & Conditions</p>
         </div>
-    </footer>
+    </footer> -->
 
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
