--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -11,7 +11,7 @@
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@User.Identity?.Name!</a>
         </li>
-         <li><a class="dropdown-item drop2" asp-controller="home" asp-action="ArtistProfile">Edit Profile</a></li>
+         <li><a class="dropdown-item drop2" asp-controller="home" asp-action="EditUserProfile">Edit Profile</a></li>
         <li><a class="dropdown-item drop2" asp-controller="home" asp-action="Order">Orders</a></li>
         <li><a class="dropdown-item drop2" asp-controller="home" asp-action="Wishlist">Wishlist</a></li>
         <li><a class="dropdown-item drop2" asp-controller="home" asp-action="ContactUs">Contact Us</a></li>
