--- a/Views/Home/Collection1.cshtml
+++ b/Views/Home/Collection1.cshtml
@@ -57,8 +57,8 @@
 <section class="my-5 py-5">
     <div class="container-fluid">
         <div class="row mt-5 pt-4">
-            <div class="col-lg-6 col-md-6 col-sm-12 col-12 d-flex justify-content-center align-items-center">
-                <div class="container d-flex justify-content-center">
+            <div class="col-lg-6 col-md-12 col-sm-12 col-12 d-flex justify-content-center align-items-center">
+                <div class="container d-flex justify-content-center pb-3">
                     <img src="~/img/painting1profile.jpg" class="img-fluid" alt="">
                 </div>
             </div>
