--- a/Views/Home/EditUserProfile.cshtml
+++ b/Views/Home/EditUserProfile.cshtml
@@ -15,7 +15,7 @@
                 </div>
                 <form method="post">
                     <div class="container d-flex justify-content-center" style="width: fit-content;">
-                        <div class="row ms-3 py-2">
+                        <div class="row ms-3 pt-2">
                             <div asp-validation-summary="All" class="text-danger"></div>
                             <div class="col-lg-6 col-md-6 col-sm-6 col-6">
                                 <label for="name" class="form-label">First name</label>
@@ -67,7 +67,7 @@
                                     </div>
                                 </div>
 
-                                <div class="d-grid gap-2 col-sm-8 ms-auto me-auto pt-4 pb-5 ">
+                                <div class="d-grid gap-2 col-sm-8 ms-auto me-auto pt-3">
                                     <a href="" class="btn btn-primary rounded-pill shadow-none">Save Changes</a>
                                 </div>
                             </div>
