--- a/Views/Home/UploadArtwork.cshtml
+++ b/Views/Home/UploadArtwork.cshtml
@@ -12,7 +12,7 @@
                                 class="me-3 mb-2" style="width: 3rem; height: 3rem;" alt="">Upload Artwork</a>
                     </div>
                     <div class="container d-flex justify-content-center" >
-                        <div class="row  py-2">
+                        <div class="row  pt-2">
                             <form action="">
                                 <div>
                                     <label for="name" class="form-label">Title</label>
