--- a/Views/Home/EditArtistProfile.cshtml
+++ b/Views/Home/EditArtistProfile.cshtml
@@ -1,6 +1,6 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@{ 
+    ViewBag.HideFooter = true;
+}
 
     <section class="container-fluid">
         <div class="row">
