--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -19,9 +19,9 @@
                     <a class="nav-link font2 active mx-2 item-1 text-white bottom-yellow" aria-current="page"
                        asp-area="" asp-controller="Home" asp-action="Index">HOME</a>
                 </li>
-                <li class="nav-item">
+           <!--     <li class="nav-item">
                     <a class="nav-link font2 mx-2 item-2 text-white" asp-controller="home" asp-action="About">ABOUT</a>
-                </li>
+                </li> -->
                 <li class="nav-item dropdown">
                     <a class="nav-link font2  mx-2 item-3 text-white"
                        id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
