--- a/Views/Home/UploadArtwork.cshtml
+++ b/Views/Home/UploadArtwork.cshtml
@@ -1,6 +1,6 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@{ 
+    ViewBag.HideFooter = true;
+}
  <section class="container-fluid">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 col-12 login-section">
