--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -50,8 +50,11 @@
             @RenderBody()
         </main>
     </div>
-  <!--  <footer class="py-5 bg-dark text-white">
-        <div class="container">
+     @if (ViewBag.HideFooter == null)
+    {
+
+        <footer class="py-5 bg-dark text-white">
+            <div class="container">
             <ul class="nav justify-content-center  pb-1 mb-1">
                 <li class="nav-item"><a asp-controller="home" asp-action="About" class="nav-link px-3 text-muted font2 footer-list">About</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-3 text-muted font2 footer-list">FAQ</a></li>
@@ -64,8 +67,8 @@
             </div>
             <p class="text-center text-muted pt-1 mt-2 footer-list">Terms & Conditions</p>
         </div>
-    </footer> -->
-
+    </footer> 
+    }
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/Bootstrap/js/bootstrap.bundle.min.js"></script>
