--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -11,16 +11,25 @@
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@User.Identity?.Name!</a>
         </li>
-         <li><a class="dropdown-item drop2" asp-controller="home" asp-action="EditUserProfile">Edit Profile</a></li>
-        <li><a class="dropdown-item drop2" asp-controller="home" asp-action="Order">Orders</a></li>
+         
+            if (await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result, "User"))
+            {
+                <li><a class="dropdown-item drop2" asp-controller="home" asp-action="EditUserProfile">Edit Profile</a></li>
+            <li><a class="dropdown-item drop2" asp-controller="home" asp-action="Order">Orders</a></li>
         <li><a class="dropdown-item drop2" asp-controller="home" asp-action="Wishlist">Wishlist</a></li>
-        <li><a class="dropdown-item drop2" asp-controller="home" asp-action="ContactUs">Contact Us</a></li>
-         <li class="nav-item">
+    
+            <li><a class="dropdown-item drop2" asp-controller="home" asp-action="ContactUs">Contact Us</a></li>
+        }
+        else if (await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result, "Artist"))
+        {
+              <li><a class="dropdown-item drop2" asp-controller="home" asp-action="ArtistProfile">Artist Profile</a></li>
+             <li><a class="dropdown-item drop2" asp-controller="home" asp-action="ContactUs">Contact Us</a></li>
+        }
+        <li class="nav-item">
             <form class="form-inline text-center" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                 <button type="submit" class="ms-3 my-2 nav-link btn btn-outline-danger btn-link text-dark">Logout</button>
             </form>
         </li>
-
     }
     else
     {
