modifications related roles

--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -78,7 +78,7 @@
                                 </div>
                                 <div class="d-grid gap-2 col-sm-8 ms-auto me-auto pt-2 pb-5 ">
                                     <button id="registerSubmit" type="submit"
-                                        class="btn btn-primary rounded-pill shadow-none btn-primary">Log in</button>
+                                        class="btn btn-primary rounded-pill shadow-none btn-primary">Create Account</button>
                                 </div>
                             </div>
                         </div>
