--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -58,12 +58,12 @@
             <ul class="nav justify-content-center  pb-1 mb-1">
                 <li class="nav-item"><a asp-controller="home" asp-action="About" class="nav-link px-3 text-muted font2 footer-list">About</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-3 text-muted font2 footer-list">FAQ</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-3 text-muted font2 footer-list">Contact Us</a></li>
+                <li class="nav-item"><a asp-controller="home" asp-action="ContactUs" class="nav-link px-3 text-muted font2 footer-list">Contact Us</a></li>
             </ul>
             <div class="text-center">
-                <a href=""><img src="~/img/icon7.png" class="img-fluid px-1" style="height: 1.4rem; width: 1.7rem;" alt=""></a>
-                <a href=""><img src="~/img/icon4.png" class="img-fluid px-1" style="height: 1.6rem; width: 1.9rem;" alt=""></a>
-                <a href=""><img src="~/img/icon3.png" class="img-fluid px-1" style="height: 1.6rem; width: 1.9rem;" alt=""></a>
+                <a href=""><img src="~/img/icon1.png" class="img-fluid ps-1" style="height: 2.4rem; width: 2.7rem;" alt=""></a>
+                <a href=""><img src="~/img/icon2.png" class="img-fluid ps-1" style="height: 2.6rem; width: 2.9rem;" alt=""></a>
+                <a href=""><img src="~/img/icon3.png" class="img-fluid ps-1" style="height: 2.6rem; width: 2.9rem;" alt=""></a>
             </div>
             <p class="text-center text-muted pt-1 mt-2 footer-list">Terms & Conditions</p>
         </div>
