--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -43,7 +43,7 @@
                                 <input class="form-check-input" asp-for="Input.RememberMe" />
                                 @Html.DisplayNameFor(m => m.Input.RememberMe)
                             </label>
-                            <a id="forgot-password" class="text-decoration-none" asp-page="./ForgotPassword">Forgot your password?</a>
+                         <!--   <a id="forgot-password" class="text-decoration-none" asp-page="./ForgotPassword">Forgot your password?</a>-->
                         </div>      
                         <div class="d-grid gap-2 col-sm-6 col-6 ms-auto me-auto pt-4">
                             <button id="login-submit" type="submit" class="btn btn-primary rounded-pill shadow-none btn-primary">Log in</button>
