--- a/Views/Home/Artist1.cshtml
+++ b/Views/Home/Artist1.cshtml
@@ -1,55 +1,114 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top p-md-3 ">
+﻿@{
+    ViewData["Title"] = "Artist1";
+}
+@using Microsoft.AspNetCore.Identity
+@using StoreToDoor.Data
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top p-md-3 ">
     <div class="container-fluid py-0">
-      <a class="navbar-brand font1  text-white fs-1 heading"  asp-area="" asp-controller="Home" asp-action="Index"><img src="~/img/logo.png" class="me-3 mb-2"
-          style="width: 3rem; height: 3rem;" alt="">Store To Door</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto  mb-2 mb-lg-0 ">
-          <li class="nav-item">
-            <a class="nav-link font2  mx-2 item-1 text-white " aria-current="page"
-              asp-area="" asp-controller="Home" asp-action="Index">HOME</a>
-          </li>
-     <!--    <li class="nav-item">
-            <a class="nav-link font2 mx-2 item-2 text-white" asp-controller="home" asp-action="About">ABOUT</a>
-          </li> -->
-              <li class="nav-item dropdown">
-                <a class="nav-link font2  mx-2 item-3 text-white bottom-purple active"
-                  id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  SHOP
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
-                  <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By Medium</a></li>
-                  <li><a class="dropdown-item drop1 font2"  asp-controller="home" asp-action="Shopbyartist">By Artist</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link  font2 mx-2 item-4 text-white" id="navbarDropdown" role="button"
-                  data-bs-toggle="dropdown" aria-expanded="false">
-                  PROFILE
-                </a>
-                 <partial name="_LoginPartial" />
-              </li>
-          <li class="nav-item">
-             <a  asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white">CART</a>
-          </li>
-           <li class="nav-item">
-             <a  asp-controller="admin"  asp-area="Admin" class="nav-link font2 mx-2 item-6 text-white">ADMIN</a>
-          </li>
-        </ul>
-        <div class="nav-item search-box rounded-pill bg-dark ms-3">
-          <input type="text" class="search-txt float-start fs-6 text-white" placeholder="search here..">
-          <a class="nav-link font2 search-btn d-flex justify-content-center align-items-center rounded-circle text-white"
-            href="#"><img style="width:1rem; height:1rem;" src="~/img/search.png"></a>
+        <a class="navbar-brand font1  text-white fs-1 heading" asp-area="" asp-controller="Home" asp-action="Index">
+            <img src="~/img/logo.png" class="me-3 mb-2"
+                 style="width: 3rem; height: 3rem;" alt="">Store To Door
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto  mb-2 mb-lg-0 ">
+                <li class="nav-item">
+                    <a class="nav-link font2  mx-2 item-1 text-white" aria-current="page"
+                       asp-area="" asp-controller="Home" asp-action="Index">HOME</a>
+                </li>
+                
+               <li class="nav-item">
+                    <a class="nav-link font2 mx-2 item-2 text-white" asp-controller="home" asp-action="About">ABOUT</a>
+                </li> 
+                @if (User.Identity.IsAuthenticated)
+                {
+                    var loggedInUser = await UserManager.FindByNameAsync(User.Identity.Name);
+                    
+                    @if (await UserManager.IsInRoleAsync(loggedInUser, UserRoles.User))
+                    {
+                        <li class="nav-item dropdown">
+                            <a class="nav-link font2  mx-2 item-3 text-white active bottom-purple"
+                       id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            SHOP
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
+                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By Medium</a></li>
+                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By Artist</a></li>
+                        </ul>
+                    </li>}
+                }else{
+                    <li class="nav-item dropdown">
+                            <a class="nav-link font2  mx-2 item-3 text-white active bottom-purple"
+                       id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            SHOP
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
+                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By Medium</a></li>
+                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By Artist</a></li>
+                        </ul>
+                    </li>
+                }
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link  font2 mx-2 item-4 text-white" id="navbarDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        PROFILE
+                    </a>
+                    <partial name="_LoginPartial" />
+                    <!--  <ul class="dropdown-menu width" aria-labelledby="navbarDropdown">
+                        <li class="ms-3 font2 fs-5 pt-2">WELCOME!</li>
+                        <li class="ms-3 mb-2">To access account and manage order</li>
+                        <form class="d-flex">
+                      <a asp-area="Identity" asp-page="/Account/Register" class="btn btn-outline-danger ms-4 me-1 px-3 mb-2">Signup</a>
+                        <a asp-area="Identity" asp-page="/Account/login" class="btn btn-outline-danger me-4 ms-1 px-3 mb-2">Login</a>
+                          <a class="btn btn-outline-danger ms-4 me-1 px-5 mb-2">Logout</a>
+                        </form>
+                         <li>
+                          <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item drop2" asp-controller="Home" asp-action="Order">Orders</a></li>
+                        <li><a class="dropdown-item drop2"  asp-controller="Home" asp-action="Wishlist">Wishlist</a></li>
+                        <li><a class="dropdown-item drop2" asp-controller="Home" asp-action="Contact">Contact Us</a></li>
+                      </ul> -->
+                </li>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    var loggedInUser = await UserManager.FindByNameAsync(User.Identity.Name);
+                    
+                    @if (await UserManager.IsInRoleAsync(loggedInUser, UserRoles.User)){
+                    <li class="nav-item">
+                        <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white">CART</a>
+                        </li>}
+                }
+                else
+                {
+                    <li class="nav-item">
+                        <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white">CART</a>
+                        </li>
+                }
+
+                @if (User.Identity.IsAuthenticated)
+                {
+                    @if (await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result, "Admin"))
+                    {
+                        <li class="nav-item">
+                            <a asp-controller="admin" asp-area="Admin" class="nav-link font2 mx-2 item-6 text-white">ADMIN PANEL</a>
+                </li> }}
+            </ul>
+            <div class="nav-item search-box rounded-pill bg-dark ms-3">
+                <input type="text" class="search-txt float-start fs-6 text-white" placeholder="search here..">
+                <a class="nav-link font2 search-btn d-flex justify-content-center align-items-center rounded-circle text-white"
+                   href="#"><img style="width:1rem; height:1rem;" src="~/img/search.png"></a>
+            </div>
         </div>
-      </div>
     </div>
-  </nav>
+</nav>
    <section class="sec4 py-5" id="artist-profile">
         <div class="container pt-3">
             <div class="row my-5 pt-3">
