--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+@using Microsoft.AspNetCore.Identity
+@using StoreToDoor.Data
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top p-md-3 ">
@@ -19,19 +23,39 @@
                     <a class="nav-link font2 active mx-2 item-1 text-white bottom-yellow" aria-current="page"
                        asp-area="" asp-controller="Home" asp-action="Index">HOME</a>
                 </li>
-           <!--     <li class="nav-item">
+                
+               <li class="nav-item">
                     <a class="nav-link font2 mx-2 item-2 text-white" asp-controller="home" asp-action="About">ABOUT</a>
-                </li> -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link font2  mx-2 item-3 text-white"
+                </li> 
+                @if (User.Identity.IsAuthenticated)
+                {
+                    var loggedInUser = await UserManager.FindByNameAsync(User.Identity.Name);
+                    
+                    @if (await UserManager.IsInRoleAsync(loggedInUser, UserRoles.User))
+                    {
+                        <li class="nav-item dropdown">
+                            <a class="nav-link font2  mx-2 item-3 text-white"
                        id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        SHOP
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
-                        <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By Medium</a></li>
-                        <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By Artist</a></li>
-                    </ul>
-                </li>
+                            SHOP
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
+                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By Medium</a></li>
+                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By Artist</a></li>
+                        </ul>
+                    </li>}
+                }else{
+                    <li class="nav-item dropdown">
+                            <a class="nav-link font2  mx-2 item-3 text-white"
+                       id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            SHOP
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
+                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By Medium</a></li>
+                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By Artist</a></li>
+                        </ul>
+                    </li>
+                }
+
                 <li class="nav-item dropdown">
                     <a class="nav-link  font2 mx-2 item-4 text-white" id="navbarDropdown" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">
@@ -54,12 +78,29 @@
                         <li><a class="dropdown-item drop2" asp-controller="Home" asp-action="Contact">Contact Us</a></li>
                       </ul> -->
                 </li>
-                <li class="nav-item">
-                    <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white">CART</a>
-                </li>
-                <li class="nav-item">
-                    <a asp-controller="admin" asp-area="Admin" class="nav-link font2 mx-2 item-6 text-white">ADMIN</a>
-                </li>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    var loggedInUser = await UserManager.FindByNameAsync(User.Identity.Name);
+                    
+                    @if (await UserManager.IsInRoleAsync(loggedInUser, UserRoles.User)){
+                    <li class="nav-item">
+                        <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white">CART</a>
+                        </li>}
+                }
+                else
+                {
+                    <li class="nav-item">
+                        <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white">CART</a>
+                        </li>
+                }
+
+                @if (User.Identity.IsAuthenticated)
+                {
+                    @if (await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result, "Admin"))
+                    {
+                        <li class="nav-item">
+                            <a asp-controller="admin" asp-area="Admin" class="nav-link font2 mx-2 item-6 text-white">ADMIN PANEL</a>
+                </li> }}
             </ul>
             <div class="nav-item search-box rounded-pill bg-dark ms-3">
                 <input type="text" class="search-txt float-start fs-6 text-white" placeholder="search here..">
@@ -92,7 +133,7 @@
             <div class="carousel-item bg" style="background-image: url('/img/bg1.jpg');">
                 <div class="container  position-absolute top-50 start-50">
                     <h1 class="text-dark font1 fw-bold">Create & Upload</h1>
-                    <a href="" class="btn btn1 border-0 btn-dark btn-lg position-relative px-5 mx-2  font2 ">Upload Now</a>
+                    <a asp-area="" asp-controller="Home" asp-action="UploadArtwork" class="btn btn1 border-0 btn-dark btn-lg position-relative px-5 mx-2  font2 ">Upload Now</a>
                 </div>
             </div>
         </div>
@@ -123,11 +164,11 @@
                     artworks like painting,handmade crafts,portraits, home-decor and many more. Explore our website and grab
                     the art you love.
                 </p>
-                <a asp-controller="home" asp-action="About"
+             <!--   <a asp-controller="home" asp-action="About"
                    class="border-0 bg-blue text-white btn-lg my-3 mx-2 px-5 py-3 font2 rounded text-decoration-none">
                     More About
                     Us
-                </a>
+                </a>-->
             </div>
         </div>
     </div>
