--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -4,6 +4,9 @@
 @{
     ViewData["Title"] = "Log in";
 }
+@{ 
+    ViewBag.HideFooter = true;
+}
 <section>
     <div class="container-fluid">
         <div class="row">
