--- a/Views/Home/ContactUs.cshtml
+++ b/Views/Home/ContactUs.cshtml
@@ -3,6 +3,9 @@
 @{
     ViewData["Title"] = "Contact Us";
 }
+@{ 
+    ViewBag.HideFooter = true;
+}
  <section>
         <div class="container-fluid">
             <div class="row">
