--- a/Views/Home/CustomArt.cshtml
+++ b/Views/Home/CustomArt.cshtml
@@ -1,4 +1,10 @@
 ﻿
+@{
+    ViewData["Title"] = "Custom Art";
+}
+@{ 
+    ViewBag.HideFooter = true;
+}
     <section class="container-fluid">
        <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12 col-12 login-section">
