--- a/Views/Home/Admin.cshtml
+++ b/Views/Home/Admin.cshtml
@@ -1,15 +1,18 @@
-﻿  <nav class="navbar navbar-light bg-light shadow">
+﻿@{ 
+    ViewBag.HideFooter = true;
+}
+<nav class="navbar navbar-light bg-light shadow">
     <div class="container">
       <a class="btn btn-dark" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
         aria-controls="offcanvasExample">
-        <img src="img/menu.png" style="height: 1.4rem; width: 1.2rem;" alt="">
+        <img src="~/img/menu.png"  style="height: 1.4rem; width: 1.2rem;" alt="">
       </a>
       <span class="font2 fs-4 admin-heading">Admin Dashboard</span>
       <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample"
         aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
-          <span class="font1 fw-bold fs-1 ms-4"><img src="~/img/logo.png" style="width: 3rem; height: 3rem;" alt=""> Store
-            To Door</span>
+          <a asp-area="" asp-controller="Home" asp-action="Index" class= "text-decoration-none text-black"> <span class="font1 fw-bold fs-1 ms-4"> <img src="~/img/logo.png" style="width: 3rem; height: 3rem;" alt=""> Store
+            To Door</span> </a>
           <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
