--- a/Views/Home/EditUserProfile.cshtml
+++ b/Views/Home/EditUserProfile.cshtml
@@ -1,4 +1,11 @@
-﻿<section>
+﻿
+@{
+    ViewData["Title"] = "Edit User Profile";
+}
+@{ 
+    ViewBag.HideFooter = true;
+}
+<section>
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12 col-12 login-section">
